# gst-conference

./: README.md  pyproject.toml
data/Drug_Drug/: preprocess_drugbank.py
data/ddi/: test.pkl  train.pkl  valid.pkl
scripts/: train.py  train_drug_drug.py  train_gcn_baseline.py  train_gnn_benchmark.py  train_gnn_benchmark_fixed.py  train_moleculenet.py
src/graph_set_transformer/data/: __init__.py  set_data_set.py
src/graph_set_transformer/models/: __init__.py  model_dropout.py  models.py
src/graph_set_transformer/utils/: __init__.py  graph_encoder.py  molecule_net_loader.py  scaffold_split.py  tdc_loader.py
