[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graph-set-transformer"
version = "0.1.0"
description = "The Graph Set Transformer (GST)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepchem>=2.8.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "pytdc>=0.3.6",
    "rdkit>=2025.9.3",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "torch-geometric>=2.7.0",
]
